<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MantenimientoActivity"
    android:background="@drawable/borde_color6_fino"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            style="@style/estiloBotonGrande"
            android:background="@drawable/borde_color2_fino"
            android:drawableRight="@drawable/categoria_ic_sf"
            android:text="@string/categories"
            android:onClick="clickBuscarCategorias"
            android:layout_margin="5dp"
            android:textColor="@color/color2_oscuro" />

        <TextView
            style="@style/estiloBotonGrande"
            android:background="@drawable/borde_color3_fino"
            android:drawableRight="@drawable/marca_ic_sf"
            android:text="@string/brands"
            android:layout_margin="5dp"
            android:onClick="clickBuscarMarcas"
            android:textColor="@color/color3_oscuro" />

        <TextView
            style="@style/estiloBotonGrande"
            android:background="@drawable/borde_color4_fino"
            android:drawableRight="@drawable/medida_ic_sf"
            android:onClick="clickBuscarUnidades"
            android:text="@string/food_unit"
            android:layout_margin="5dp"
            android:textColor="@color/color4_oscuro" />

        <TextView
            style="@style/estiloBotonGrande"
            android:background="@drawable/borde_color5_fino"
            android:drawableRight="@drawable/backup_ic_sf"
            android:text="@string/backup_restore"
            android:layout_margin="5dp"
            android:onClick="clickBachupRestore"
            android:textColor="@color/color5_oscuro" />

    </LinearLayout>

</LinearLayout>