<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainGeneralConfigActivity"
    android:background="@drawable/borde_color6_fino"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/estiloBotonGrande"
            android:background="@drawable/borde_color1_fino"
            android:drawableRight="@drawable/tabla_ic_sf"
            android:onClick="clickAlimentosGenerales"
            android:text="@string/generalfood"
            android:layout_margin="5dp"
            android:textColor="@color/color1_oscuro" />

        <TextView
            style="@style/estiloBotonGrande"
            android:background="@drawable/borde_color2_fino"
            android:drawableRight="@drawable/personal_ic_sf"
            android:onClick="clickAlimentosPersonales"
            android:text="@string/personalfood"
            android:layout_margin="5dp"
            android:textColor="@color/color2_oscuro" />

        <TextView
            style="@style/estiloBotonGrande"
            android:background="@drawable/borde_color5_fino"
            android:drawableRight="@drawable/mantenimiento_ic_sf"
            android:text="@string/admin_extra_data"
            android:layout_margin="5dp"
            android:onClick="clickConfigDatos"
            android:textColor="@color/color5_oscuro" />

        <TextView
            style="@style/estiloBotonGrande"
            android:background="@drawable/borde_color5_fino"
            android:drawableRight="@drawable/backup_ic_sf"
            android:text="@string/backup_restore"
            android:layout_margin="5dp"
            android:onClick="clickBachupRestore"
            android:textColor="@color/color5_oscuro" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/FABIzquierda"
            android:id="@+id/cancelFAB"
            android:onClick="clickFABCancelar"
            app:backgroundTint="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>